# pyproject.toml-with-setup.py-test

./: pyproject.toml  setup.py  xx
pyprojecttest/: __init__.py
