[tool.poetry]
name = "pyprojecttest"
version = "0.0.1"
description = ""
authors = ["JoMingyu <mingyu.planb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
